--- a/.github/workflows/publish-test-results.yml
+++ b/.github/workflows/publish-test-results.yml
@@ -1,32 +1,31 @@
-name: Publish test results
-on:
-  workflow_run:
-    workflows:
-      - Continuous integration
-    types:
-      - completed
-permissions: {}
 jobs:
   test-results:
-    name: Publish test results
-    runs-on: ubuntu-latest
     if: github.event.workflow_run.conclusion != 'skipped'
+    name: Publish test results
     permissions:
+      actions: read
       checks: write
-      pull-requests: write
       contents: read
       issues: read
-      actions: read
+      pull-requests: write
+    runs-on: self-hosted
     steps:
-      - name: Download and extract artifacts
-        uses: dawidd6/action-download-artifact@246dbf436b23d7c49e21a7ab8204ca9ecd1fe615
-        with:
-          run_id: ${{ github.event.workflow_run.id }}
-          path: artifacts
-      - name: Publish test results
-        uses: EnricoMi/publish-unit-test-result-action@v2
-        with:
-          commit: ${{ github.event.workflow_run.head_sha }}
-          event_file: artifacts/Event file/event.json
-          event_name: ${{ github.event.workflow_run.event }}
-          files: "artifacts/**/*.xml"
+    - continue-on-error: true
+      name: Download and extract artifacts
+      uses: dawidd6/action-download-artifact@246dbf436b23d7c49e21a7ab8204ca9ecd1fe615
+      with:
+        path: artifacts
+        run_id: ${{ github.event.workflow_run.id }}
+    - continue-on-error: true
+      name: Publish test results
+      uses: EnricoMi/publish-unit-test-result-action@v2
+      with:
+        commit: ${{ github.event.workflow_run.head_sha }}
+        event_file: artifacts/Event file/event.json
+        event_name: ${{ github.event.workflow_run.event }}
+        files: artifacts/**/*.xml
+name: Publish test results
+on:
+  repository_dispatch:
+    types: trigger-ga___publish-test-results.yml
+permissions: {}
